--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,65 @@
-Jinja2==2.8
-MarkupSafe==0.23
-Pygments==2.1.3
+alembic==0.8.8
 backports-abc==0.4
+bcolz==0.12.1
+Bottleneck==1.2.0
+cachetools==2.0.0
+click==6.6
+contextlib2==0.5.4
+cycler==0.10.0
+cyordereddict==1.0.0
+Cython==0.25.1
 decorator==4.0.10
+empyrical==0.2.1
 entrypoints==0.2.2
+intervaltree==2.1.0
 ipykernel==4.5.0
 ipython==5.1.0
 ipython-genutils==0.1.0
 ipywidgets==5.2.2
+Jinja2==2.8
 jsonschema==2.5.1
 jupyter==1.0.0
 jupyter-client==4.4.0
 jupyter-console==5.0.0
 jupyter-core==4.2.0
+Logbook==1.0.0
+Mako==1.0.6
+MarkupSafe==0.23
+matplotlib==1.5.3
 mistune==0.7.3
+multipledispatch==0.4.9
 nbconvert==4.2.0
 nbformat==4.1.0
+networkx==1.11
 notebook==4.2.3
+numexpr==2.6.1
+numpy==1.11.2
+pandas==0.17.1
+pandas-datareader==0.2.1
+patsy==0.4.1
 pexpect==4.2.1
 pickleshare==0.7.4
 prompt-toolkit==1.0.9
 ptyprocess==0.5.1
+Pygments==2.1.3
+pyparsing==2.1.10
+python-dateutil==2.6.0
+python-editor==1.0.1
+pytz==2016.7
 pyzmq==16.0.0
 qtconsole==4.2.1
+requests==2.11.1
+requests-file==1.4.1
+scipy==0.18.1
 simplegeneric==0.8.1
 six==1.10.0
+sortedcontainers==1.5.4
+SQLAlchemy==1.1.3
+statsmodels==0.6.1
 terminado==0.6
+toolz==0.8.0
 tornado==4.4.2
 traitlets==4.3.1
 wcwidth==0.1.7
 widgetsnbextension==1.2.6
+zipline==1.0.2
